# Licenta

./: .gitignore  README.md
demo/: CMakeLists.txt  DEMO_REPORT.md  prj.conf
demo/boards/: mps2_an386.conf
demo/src/: demo_apps.c  demo_apps.h  main.c
passes/: CMakeLists.txt  GlobalsPass.cpp  HeapBoundPass.cpp  IMPLEMENTATION.md  VMMUPass.cpp  VMMUPassNoHoist.cpp  VMMUPassO0.cpp  instrument_demo.sh  stubs.h
perf_extended/: CMakeLists.txt  prj.conf  run.sh
perf_extended/boards/: mps2_an386.conf  nucleo_f429zi.conf
perf_extended/src/: bare_glue.c  main.c  vmmu_glue.c  workloads.c  workloads.h
vmmu/: Kconfig  boundary.c  boundary.h  documentation.md  kernel_wrap.c  libc_wrap.c  malloc_wrap.c  pass_defaults.c  ram_region.h  tlb.c  tlb.h  translator.c  translator.h  vmmu.c  vmmu.h
vmmu/app/: IMPLEMENTATION.md  app.c  app.h  documentation.md
vmmu/bump/: bump.c  bump.h  documentation.md
vmmu/frame/: documentation.md  frame.c  frame.h
vmmu/heap/: documentation.md  heap.c  heap.h
vmmu/virtual_space/: addrspace.c  addrspace.h  documentation.md  vpage.h
